--- a/Servisur_Django/Base_Datos/templates/base_datos/Estado_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Estado_reparacion.html
@@ -4,16 +4,55 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/panel.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <div class="estado-page py-4">
 
   <div class="d-flex align-items-center justify-content-between mb-3">
     <div>
-      <h3 class="mb-0 text-secondary">📊 Estado de Reparación</h3>
+      <h3 class="mb-0 text-secondary"> Estado de Reparación</h3>
       <small class="text-muted">Busca y actualiza el estado de las órdenes</small>
+      
+
+      
     </div>
     <div>
       <!-- espacio para futuros botones -->
+       <div class="container mt-3">
+
+  
+<button type="button" class="btn btn-circle" data-bs-toggle="modal" data-bs-target="#myModal">
+  <img src="{% static 'img/iso4.gif' %}" class="info-img">
+</button>
+
+
+</div>
+
+<!-- The Modal -->
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Modal Heading</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        Modal body..
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
     </div>
   </div>
 
@@ -71,9 +110,9 @@
       <table id="tablaPedidos" class="table table-hover align-middle mb-0">
         <thead class="table-header">
           <tr>
-            <th>No orden</th>
+            <th>Nro orden</th>
             <th>Nombre y apellido</th>
-            <th>RUT</th>
+            <th>Nro Documento</th>
             <th>Fecha</th>
             <th>Modelo</th>
             <th>Serie / MSI</th>
