--- a/Servisur_Django/Base_Datos/templates/base_datos/base.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/base.html
@@ -33,12 +33,12 @@
       <div class="ms-auto d-flex align-items-center gap-3">
         <a
           href="{% url 'registrar_reparacion' %}"
-          class="nav-link small text-secondary"
+          class="nav-link medium text-secondary"
           >Registrar</a
         >
         <a
           href="{% url 'consultar_historial' %}"
-          class="nav-link small text-secondary"
+          class="nav-link medium text-secondary"
           >Historial</a
         >
 
