--- a/Servisur_Django/Base_Datos/templates/base_datos/main.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/main.html
@@ -27,7 +27,7 @@
     <div class="col-md-6">
       <div class="info-card p-3 h-100 rounded shadow-sm">
         <div class="d-flex gap-3">
-          <img src="{% static 'img/iso1.png' %}" alt="ISO" class="info-img rounded">
+          <img src="{% static 'img/iso5.gif' %}" alt="ISO" class="info-img rounded">
           <div>
             <h6 class="mb-1">ISO 27001</h6>
             <p class="text-muted small mb-0">Resumen de políticas y pasos clave para el cumplimiento interno.</p>
@@ -81,7 +81,7 @@
         <div class="card h-100 shadow-sm action-card">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <i class="bi bi-clipboard-data fs-1 text-success"></i>
-            <h5 class="mt-3">Consultar Historial</h5>
+            <h5 class="mt-3">Gestionar Reparaciones</h5>
           </div>
         </div>
       </a>
