Ultimo cambio de diseno
cambie una imagen

--- a/Servisur_Django/Base_Datos/templates/base_datos/Estado_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Estado_reparacion.html
@@ -23,7 +23,7 @@
 
   
 <button type="button" class="btn btn-circle" data-bs-toggle="modal" data-bs-target="#myModal">
-  <img src="{% static 'img/iso4.gif' %}" class="info-img">
+  <img src="{% static 'img/Er.png' %}" class="info-img">
 </button>
 
 
