--- a/Servisur_Django/Base_Datos/templates/base_datos/Estado_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Estado_reparacion.html
@@ -36,13 +36,13 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Modal Heading</h4>
+        <h4 class="modal-title">Estado de reparaciones</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
 
       <!-- Modal body -->
       <div class="modal-body">
-        Modal body..
+        Esta página permite consultar el historial de reparaciones filtrando por RUT, nombre, número de orden o fecha. Los resultados se muestran en una tabla con opción de edición rápida.
       </div>
 
       <!-- Modal footer -->
